clusters/cl01tl/manifests/ollama/HTTPRoute-ollama-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-web
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    helm.sh/chart: ollama-5.1.0
  namespace: ollama
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "ollama-web.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ollama-web
          namespace: ollama
          port: 80
          weight: 1
